grammars/rocksql_parser.go
// Code generated from grammars/RocksQL.g4 by ANTLR 4.13.2. DO NOT EDIT.

package grammars // RocksQL
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type RocksQLParser struct {
	*antlr.BaseParser
}

var RocksQLParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func rocksqlParserInit() {
	staticData := &RocksQLParserStaticData
	staticData.LiteralNames = []string{
		"", "'PUT'", "'GET'", "'DEL'", "'BATCH'", "'{'", "'}'", "'SNAPSHOT'",
		"'CREATE'", "'DELETE'", "'ADMIN'", "'COMPACT'", "'STATS'", "'CONFIG'",
		"'SET'",
	}
	staticData.SymbolicNames = []string{
		"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "STRING",
		"NUMBER", "IDENTIFIER", "WS", "COMMENT",
	}
	staticData.RuleNames = []string{
		"command", "operation", "putOperation", "getOperation", "deleteOperation",
		"batchOperation", "batchEntry", "snapshotOperation", "adminCommand",
		"configCommand", "key", "value", "identifier", "option",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// RocksQLParserInit initializes any static state used to implement RocksQLParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewRocksQLParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func RocksQLParserInit() {
	staticData := &RocksQLParserStaticData
	staticData.once.Do(rocksqlParserInit)
}

// NewRocksQLParser produces a new parser instance for the optional input antlr.TokenStream.
func NewRocksQLParser(input antlr.TokenStream) *RocksQLParser {
	RocksQLParserInit()
	this := new(RocksQLParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &RocksQLParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "RocksQL.g4"

	return this
}

// RocksQLParser tokens.
const (
	RocksQLParserEOF        = antlr.TokenEOF
	RocksQLParserT__0       = 1
	RocksQLParserT__1       = 2
	RocksQLParserT__2       = 3
	RocksQLParserT__3       = 4
	RocksQLParserT__4       = 5
	RocksQLParserT__5       = 6
	RocksQLParserT__6       = 7
	RocksQLParserT__7       = 8
	RocksQLParserT__8       = 9
	RocksQLParserT__9       = 10
	RocksQLParserT__10      = 11
	RocksQLParserT__11      = 12
	RocksQLParserT__12      = 13
	RocksQLParserT__13      = 14
	RocksQLParserSTRING     = 15
	RocksQLParserNUMBER     = 16
	RocksQLParserIDENTIFIER = 17
	RocksQLParserWS         = 18
	RocksQLParserCOMMENT    = 19
)

// RocksQLParser rules.
const (
	RocksQLParserRULE_command           = 0
	RocksQLParserRULE_operation         = 1
	RocksQLParserRULE_putOperation      = 2
	RocksQLParserRULE_getOperation      = 3
	RocksQLParserRULE_deleteOperation   = 4
	RocksQLParserRULE_batchOperation    = 5
	RocksQLParserRULE_batchEntry        = 6
	RocksQLParserRULE_snapshotOperation = 7
	RocksQLParserRULE_adminCommand      = 8
	RocksQLParserRULE_configCommand     = 9
	RocksQLParserRULE_key               = 10
	RocksQLParserRULE_value             = 11
	RocksQLParserRULE_identifier        = 12
	RocksQLParserRULE_option            = 13
)

// ICommandContext is an interface to support dynamic dispatch.
type ICommandContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Operation() IOperationContext
	EOF() antlr.TerminalNode

	// IsCommandContext differentiates from other interfaces.
	IsCommandContext()
}

type CommandContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyCommandContext() *CommandContext {
	var p = new(CommandContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = RocksQLParserRULE_command
	return p
}

func InitEmptyCommandContext(p *CommandContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = RocksQLParserRULE_command
}

func (*CommandContext) IsCommandContext() {}

func NewCommandContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *CommandContext {
	var p = new(CommandContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = RocksQLParserRULE_command

	return p
}

func (s *CommandContext) GetParser() antlr.Parser { return s.parser }

func (s *CommandContext) Operation() IOperationContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IOperationContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IOperationContext)
}

func (s *CommandContext) EOF() antlr.TerminalNode {
	return s.GetToken(RocksQLParserEOF, 0)
}

func (s *CommandContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *CommandContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *CommandContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(RocksQLListener); ok {
		listenerT.EnterCommand(s)
	}
}

func (s *CommandContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(RocksQLListener); ok {
		listenerT.ExitCommand(s)
	}
}

func (p *RocksQLParser) Command() (localctx ICommandContext) {
	localctx = NewCommandContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, RocksQLParserRULE_command)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(28)
		p.Operation()
	}
	{
		p.SetState(29)
		p.Match(RocksQLParserEOF)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IOperationContext is an interface to support dynamic dispatch.
type IOperationContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	PutOperation() IPutOperationContext
	GetOperation() IGetOperationContext
	DeleteOperation() IDeleteOperationContext
	BatchOperation() IBatchOperationContext
	SnapshotOperation() ISnapshotOperationContext
	AdminCommand() IAdminCommandContext

	// IsOperationContext differentiates from other interfaces.
	IsOperationContext()
}

type OperationContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyOperationContext() *OperationContext {
	var p = new(OperationContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = RocksQLParserRULE_operation
	return p
}

func InitEmptyOperationContext(p *OperationContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = RocksQLParserRULE_operation
}

func (*OperationContext) IsOperationContext() {}

func NewOperationContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *OperationContext {
	var p = new(OperationContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = RocksQLParserRULE_operation

	return p
}

func (s *OperationContext) GetParser() antlr.Parser { return s.parser }

func (s *OperationContext) PutOperation() IPutOperationContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IPutOperationContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IPutOperationContext)
}

func (s *OperationContext) GetOperation() IGetOperationContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IGetOperationContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IGetOperationContext)
}

func (s *OperationContext) DeleteOperation() IDeleteOperationContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IDeleteOperationContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IDeleteOperationContext)
}

func (s *OperationContext) BatchOperation() IBatchOperationContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IBatchOperationContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IBatchOperationContext)
}

func (s *OperationContext) SnapshotOperation() ISnapshotOperationContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ISnapshotOperationContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ISnapshotOperationContext)
}

func (s *OperationContext) AdminCommand() IAdminCommandContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IAdminCommandContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IAdminCommandContext)
}

func (s *OperationContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *OperationContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *OperationContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(RocksQLListener); ok {
		listenerT.EnterOperation(s)
	}
}

func (s *OperationContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(RocksQLListener); ok {
		listenerT.ExitOperation(s)
	}
}

func (p *RocksQLParser) Operation() (localctx IOperationContext) {
	localctx = NewOperationContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, RocksQLParserRULE_operation)
	p.SetState(37)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetTokenStream().LA(1) {
	case RocksQLParserT__0:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(31)
			p.PutOperation()
		}

	case RocksQLParserT__1:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(32)
			p.GetOperation()
		}

	case RocksQLParserT__2:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(33)
			p.DeleteOperation()
		}

	case RocksQLParserT__3:
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(34)
			p.BatchOperation()
		}

	case RocksQLParserT__6:
		p.EnterOuterAlt(localctx, 5)
		{
			p.SetState(35)
			p.SnapshotOperation()
		}

	case RocksQLParserT__9:
		p.EnterOuterAlt(localctx, 6)
		{
			p.SetState(36)
			p.AdminCommand()
		}

	default:
		p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IPutOperationContext is an interface to support dynamic dispatch.
type IPutOperationContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Key() IKeyContext
	Value() IValueContext

	// IsPutOperationContext differentiates from other interfaces.
	IsPutOperationContext()
}

type PutOperationContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyPutOperationContext() *PutOperationContext {
	var p = new(PutOperationContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = RocksQLParserRULE_putOperation
	return p
}

func InitEmptyPutOperationContext(p *PutOperationContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = RocksQLParserRULE_putOperation
}

func (*PutOperationContext) IsPutOperationContext() {}

func NewPutOperationContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *PutOperationContext {
	var p = new(PutOperationContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = RocksQLParserRULE_putOperation

	return p
}

func (s *PutOperationContext) GetParser() antlr.Parser { return s.parser }

func (s *PutOperationContext) Key() IKeyContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IKeyContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IKeyContext)
}

func (s *PutOperationContext) Value() IValueContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IValueContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IValueContext)
}

func (s *PutOperationContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *PutOperationContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *PutOperationContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(RocksQLListener); ok {
		listenerT.EnterPutOperation(s)
	}
}

func (s *PutOperationContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(RocksQLListener); ok {
		listenerT.ExitPutOperation(s)
	}
}

func (p *RocksQLParser) PutOperation() (localctx IPutOperationContext) {
	localctx = NewPutOperationContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, RocksQLParserRULE_putOperation)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(39)
		p.Match(RocksQLParserT__0)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(40)
		p.Key()
	}
	{
		p.SetState(41)
		p.Value()
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IGetOperationContext is an interface to support dynamic dispatch.
type IGetOperationContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Key() IKeyContext

	// IsGetOperationContext differentiates from other interfaces.
	IsGetOperationContext()
}

type GetOperationContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyGetOperationContext() *GetOperationContext {
	var p = new(GetOperationContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = RocksQLParserRULE_getOperation
	return p
}

func InitEmptyGetOperationContext(p *GetOperationContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = RocksQLParserRULE_getOperation
}

func (*GetOperationContext) IsGetOperationContext() {}

func NewGetOperationContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *GetOperationContext {
	var p = new(GetOperationContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = RocksQLParserRULE_getOperation

	return p
}

func (s *GetOperationContext) GetParser() antlr.Parser { return s.parser }

func (s *GetOperationContext) Key() IKeyContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IKeyContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IKeyContext)
}

func (s *GetOperationContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *GetOperationContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *GetOperationContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(RocksQLListener); ok {
		listenerT.EnterGetOperation(s)
	}
}

func (s *GetOperationContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(RocksQLListener); ok {
		listenerT.ExitGetOperation(s)
	}
}

func (p *RocksQLParser) GetOperation() (localctx IGetOperationContext) {
	localctx = NewGetOperationContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, RocksQLParserRULE_getOperation)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(43)
		p.Match(RocksQLParserT__1)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(44)
		p.Key()
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IDeleteOperationContext is an interface to support dynamic dispatch.
type IDeleteOperationContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Key() IKeyContext

	// IsDeleteOperationContext differentiates from other interfaces.
	IsDeleteOperationContext()
}

type DeleteOperationContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyDeleteOperationContext() *DeleteOperationContext {
	var p = new(DeleteOperationContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = RocksQLParserRULE_deleteOperation
	return p
}

func InitEmptyDeleteOperationContext(p *DeleteOperationContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = RocksQLParserRULE_deleteOperation
}

func (*DeleteOperationContext) IsDeleteOperationContext() {}

func NewDeleteOperationContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *DeleteOperationContext {
	var p = new(DeleteOperationContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = RocksQLParserRULE_deleteOperation

	return p
}

func (s *DeleteOperationContext) GetParser() antlr.Parser { return s.parser }

func (s *DeleteOperationContext) Key() IKeyContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IKeyContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IKeyContext)
}

func (s *DeleteOperationContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *DeleteOperationContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *DeleteOperationContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(RocksQLListener); ok {
		listenerT.EnterDeleteOperation(s)
	}
}

func (s *DeleteOperationContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(RocksQLListener); ok {
		listenerT.ExitDeleteOperation(s)
	}
}

func (p *RocksQLParser) DeleteOperation() (localctx IDeleteOperationContext) {
	localctx = NewDeleteOperationContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, RocksQLParserRULE_deleteOperation)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(46)
		p.Match(RocksQLParserT__2)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(47)
		p.Key()
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IBatchOperationContext is an interface to support dynamic dispatch.
type IBatchOperationContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllBatchEntry() []IBatchEntryContext
	BatchEntry(i int) IBatchEntryContext

	// IsBatchOperationContext differentiates from other interfaces.
	IsBatchOperationContext()
}

type BatchOperationContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyBatchOperationContext() *BatchOperationContext {
	var p = new(BatchOperationContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = RocksQLParserRULE_batchOperation
	return p
}

func InitEmptyBatchOperationContext(p *BatchOperationContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = RocksQLParserRULE_batchOperation
}

func (*BatchOperationContext) IsBatchOperationContext() {}

func NewBatchOperationContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *BatchOperationContext {
	var p = new(BatchOperationContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = RocksQLParserRULE_batchOperation

	return p
}

func (s *BatchOperationContext) GetParser() antlr.Parser { return s.parser }

func (s *BatchOperationContext) AllBatchEntry() []IBatchEntryContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IBatchEntryContext); ok {
			len++
		}
	}

	tst := make([]IBatchEntryContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IBatchEntryContext); ok {
			tst[i] = t.(IBatchEntryContext)
			i++
		}
	}

	return tst
}

func (s *BatchOperationContext) BatchEntry(i int) IBatchEntryContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IBatchEntryContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IBatchEntryContext)
}

func (s *BatchOperationContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *BatchOperationContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *BatchOperationContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(RocksQLListener); ok {
		listenerT.EnterBatchOperation(s)
	}
}

func (s *BatchOperationContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(RocksQLListener); ok {
		listenerT.ExitBatchOperation(s)
	}
}

func (p *RocksQLParser) BatchOperation() (localctx IBatchOperationContext) {
	localctx = NewBatchOperationContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 10, RocksQLParserRULE_batchOperation)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(49)
		p.Match(RocksQLParserT__3)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(50)
		p.Match(RocksQLParserT__4)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	p.SetState(52)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for ok := true; ok; ok = _la == RocksQLParserT__0 || _la == RocksQLParserT__2 {
		{
			p.SetState(51)
			p.BatchEntry()
		}

		p.SetState(54)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(56)
		p.Match(RocksQLParserT__5)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IBatchEntryContext is an interface to support dynamic dispatch.
type IBatchEntryContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	PutOperation() IPutOperationContext
	DeleteOperation() IDeleteOperationContext

	// IsBatchEntryContext differentiates from other interfaces.
	IsBatchEntryContext()
}

type BatchEntryContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyBatchEntryContext() *BatchEntryContext {
	var p = new(BatchEntryContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = RocksQLParserRULE_batchEntry
	return p
}

func InitEmptyBatchEntryContext(p *BatchEntryContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = RocksQLParserRULE_batchEntry
}

func (*BatchEntryContext) IsBatchEntryContext() {}

func NewBatchEntryContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *BatchEntryContext {
	var p = new(BatchEntryContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = RocksQLParserRULE_batchEntry

	return p
}

func (s *BatchEntryContext) GetParser() antlr.Parser { return s.parser }

func (s *BatchEntryContext) PutOperation() IPutOperationContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IPutOperationContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IPutOperationContext)
}

func (s *BatchEntryContext) DeleteOperation() IDeleteOperationContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IDeleteOperationContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IDeleteOperationContext)
}

func (s *BatchEntryContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *BatchEntryContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *BatchEntryContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(RocksQLListener); ok {
		listenerT.EnterBatchEntry(s)
	}
}

func (s *BatchEntryContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(RocksQLListener); ok {
		listenerT.ExitBatchEntry(s)
	}
}

func (p *RocksQLParser) BatchEntry() (localctx IBatchEntryContext) {
	localctx = NewBatchEntryContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 12, RocksQLParserRULE_batchEntry)
	p.SetState(60)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetTokenStream().LA(1) {
	case RocksQLParserT__0:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(58)
			p.PutOperation()
		}

	case RocksQLParserT__2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(59)
			p.DeleteOperation()
		}

	default:
		p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ISnapshotOperationContext is an interface to support dynamic dispatch.
type ISnapshotOperationContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Identifier() IIdentifierContext

	// IsSnapshotOperationContext differentiates from other interfaces.
	IsSnapshotOperationContext()
}

type SnapshotOperationContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}
